--- a/_data/plays/problem_workshop.yml
+++ b/_data/plays/problem_workshop.yml
@@ -7,11 +7,11 @@ hero:
 description: During the problem workshop, the product team presents their findings from the discovery phase to the business. The goals are to narrow the universe of problem to a prioritized list and align the business and the product team to a common vision for framing.
 steps:
   - title: Prioritize your insights
-    text: Prior to the problem workshop, the product team defines a list of the most important problems and prioritizes them. Learn more about <a href="../dump_and_sort">dump and sort</a>.
+    text: Prior to the problem workshop, the product team defines a list of the most important problems and prioritizes them. Learn more about <a href="../../practices/dump_and_sort">dump and sort</a>.
   - title: Present your findings
     text: Review the insights from the discovery phase with the product owners and stakeholders. Explain each problem individually. Divide problems into business problems and technical problems.
   - title: Identify technical challenges to overcome
-    text: With the support of the product engineers, assess the technical complexity of the problems and form an understanding of the technical challenges and solutions that may be available for a problem. Perform a 2x2 exercise with the technical problems. Stack rank the technical problems by the business impact vs technical difficulty to solve. Learn more about <a href="../2x2_sorting">2x2 sorting</a> and <a href="../stack_rank">stack rank</a>.
+    text: With the support of the product engineers, assess the technical complexity of the problems and form an understanding of the technical challenges and solutions that may be available for a problem. Perform a 2x2 exercise with the technical problems. Stack rank the technical problems by the business impact vs technical difficulty to solve. Learn more about <a href="../../practices/2x2_sorting">2x2 sorting</a> and <a href="../../practices/stack_ranking">stack ranking</a>.
 related:
   - Dump and Sort
   - 2x2 Sorting
