--- a/_data/plays/index.yml
+++ b/_data/plays/index.yml
@@ -14,13 +14,13 @@ sections:
       - Risks and Mitigations
   - title: Problem
     pill: Plays
-    text: Get the project started and align the team towards a common direction.
+    text: Understand the universe of problems, prioritize them to narrow the team's focus, and define a valuable technical complex problem to solve.
     related:
       - Discovery
       - Problem Workshop
   - title: Solution
     pill: Plays
-    text: Get the project started and align the team towards a common direction.
+    text: Conceive and test solutions that solve problems and agree on a solution.
     related:
       - Framing
       - Inception
