--- a/_data/plays/strategic_objectives.yml
+++ b/_data/plays/strategic_objectives.yml
@@ -15,3 +15,4 @@ steps:
     text: Define the single strategic objective that will guide the next stage of the project. Build consensus with the product owner team and product stakeholders around the most important business aims.
 related:
   - Dump and Sort
+  - Affinity Clusters
