--- a/_data/practices/dot_voting.yml
+++ b/_data/practices/dot_voting.yml
@@ -17,5 +17,5 @@ steps:
   - title: Winning ideas
     text: The cards with the most votes will be discussed with the group.
 related:
-  - Discovery
-  - Framing
+  - Business Goals
+  - Risks and Mitigations
