--- a/_data/practices/dump_and_sort.yml
+++ b/_data/practices/dump_and_sort.yml
@@ -11,5 +11,7 @@ steps:
   - title: Sort
     text: As a group, discuss and evaluate each Leankit card or sticky note. Take each idea and group them in common categories.
 related:
-  - Discovery
-  - Framing
+  - Strategic Objectives
+  - Business Goals
+  - Risks and Mitigations
+  - Problem Workshop
