Replaced some references

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,1 +1,1 @@
-text: The DID(it) Playbook is a project of U.S. Citizen and Immigration Services, maintained by the Digital Innovation & Development Program.
+text: The KPS Playbook is a project of U.S. Citizen and Immigration Services, maintained by the Digital Innovation & Development Program.
