--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: DID(it) Playbook
+name: KPS Playbook
 
 # Short bio or description (displayed in the header)
 description: If you build it, they will come.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: "/USCIS/kps_playbook/images/kps_logo_nocircle.svg"
+avatar: "/kps_playbook/images/kps_logo_nocircle.svg"
 #
 # Flags below are optional
 #
@@ -46,7 +46,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/USCIS/kps_playbook"
+baseurl: "/kps_playbook"
 
 #
 # !! You don't need to change any of the configuration flags below !!
