--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: KPS Playbook
+name: KPS Agile Playbook
 
 # Short bio or description (displayed in the header)
 description: If you build it, they will come.
